fix projects table being cut off at bottom

--- a/web/projects/style.css
+++ b/web/projects/style.css
@@ -28,7 +28,7 @@
         margin: 0;
         background-color: var(--white);
         border-radius: 4px;
-        height: calc(100% - 3rem);
+        height: calc(100% - 7rem);
 
     }
 
